--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
+        <li><a href="#our-beginning">Testing Branch</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
       </ul>
